Set Path in other job stage,

--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -135,12 +135,10 @@ jobs:
           git checkout clang_10
           cmake . -DCMAKE_PREFIX_PATH=/usr/lib/llvm-10
           make
-          export PATH=$PATH:$(pwd)/bin
-          echo $PATH
 
       - name: build
         run: |
-          echo $PATH
+          export PATH=$PATH:/tmp/include-what-you-use/bin
           mkdir build
           cd build
           cmake .. -DBUILD_INCLUDE_WHAT_YOU_USE=ON -DBUILD_USE_OPENMP=ON -DBUILD_BOOST_EXAMPLE=ON
