--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -125,7 +125,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install boost
-        run: sudo apt-get update -y && sudo apt-get install -y libboost-filesystem1.71-dev
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y libboost-filesystem1.71-dev
 
       - name: install iwyu
         run: |
