Adds a few cuda properties requests and prints in the cuda unit tests. Enables separable compilation in the cuda example library.

--- a/src/cuda_example/CMakeLists.txt
+++ b/src/cuda_example/CMakeLists.txt
@@ -16,5 +16,10 @@ set(PRIVATE_LINK)
 add_target()
 
 # Optionally set the separable compilation on. Default is off.
-#set_target_properties(cuda_example PROPERTIES
-#                            CUDA_SEPARABLE_COMPILATION OFF)
+set_target_properties(cuda_example PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
+# according to linker error when building static libraries and separate compilation.
+# https://stackoverflow.com/questions/50033435/cmake-cuda-separate-compilation-static-lib-link-error-on-windows-but-not-on-ubun
+if (NOT BUILD_SHARED_LIBRARY)
+    set_target_properties(cuda_example PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+endif()
