--- a/.github/workflows/advanced_build.yml
+++ b/.github/workflows/advanced_build.yml
@@ -13,7 +13,7 @@ jobs:
         run: >
           mkdir build && cd build && cmake ..
           -DBUILD_WARNINGS_AS_ERRORS=ON
-          -DBUILD_USE_OPENMP=ON
+          -DCPPSTART_USE_OPENMP=ON
 
       - name: build
         run: cmake --build build --config Debug
@@ -33,7 +33,7 @@ jobs:
           mkdir build && cd build && cmake ..
           -DBUILD_WARNINGS_AS_ERRORS=ON
           -DBUILD_SHARED_LIBS=OFF
-          -DBUILD_USE_OPENMP=ON
+          -DCPPSTART_USE_OPENMP=ON
 
       - name: build
         run: cmake --build build --config Debug
@@ -53,7 +53,7 @@ jobs:
         run: >
           mkdir build && cd build && cmake ..
           -DBUILD_WARNINGS_AS_ERRORS=ON
-          -DBUILD_USE_OPENMP=ON
+          -DCPPSTART_USE_OPENMP=ON
 
       - name: build
         run: cmake --build build --config Debug
@@ -72,7 +72,7 @@ jobs:
           mkdir build && cd build && cmake ..
           -DBUILD_WARNINGS_AS_ERRORS=ON
           -DBUILD_SHARED_LIBS=OFF
-          -DBUILD_USE_OPENMP=ON
+          -DCPPSTART_USE_OPENMP=ON
 
       - name: build
         run: cmake --build build --config Debug
