Add OPenMP and MPI macros. Use boost static libraries when BUILD_SHARED_LIBARIES is off.

--- a/src/mpi_example/CMakeLists.txt
+++ b/src/mpi_example/CMakeLists.txt
@@ -13,13 +13,6 @@ set(PUBLIC_LINK)
 
 set(PRIVATE_LINK)
 
-if(MPI_FOUND)
-    list(APPEND PRIVATE_LINK
-            MPI::MPI_CXX)
-endif()
+linkMPI()
 
 add_target()
-
-if(MPI_FOUND)
-    target_compile_definitions(MPI_example PRIVATE _MPI)
-endif()
