--- a/src/openmp_example/CMakeLists.txt
+++ b/src/openmp_example/CMakeLists.txt
@@ -13,9 +13,6 @@ set(PUBLIC_LINK)
 
 set(PRIVATE_LINK)
 
-if(OpenMP_CXX_FOUND)
-    list(APPEND PRIVATE_LINK
-            OpenMP::OpenMP_CXX)
-endif()
+linkOpenMP()
 
 add_target()
