--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Get specific version CMake, v3.19.4
-        uses: lukka/get-cmake@v3.19.4
+      - name: Get specific version CMake, v3.19.2
+        uses: lukka/get-cmake@v3.19.2
 
       - name: configure
         run: cmake --version && mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
+        run: cmake --version && mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
 
       - name: build
         run: cmake --build build --config Debug
