Execute conan seperatly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,11 @@ jobs:
            export PATH=$PATH:/home/runner/.local/bin
            conan --version
 
+      - name: Execute conan
+        run: mkdir build && cd build && conan install ..
+
       - name: configure
-        run: cmake --version && mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
+        run: cmake --version && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
 
       - name: build
         run: cmake --build build --config Debug
@@ -39,8 +42,11 @@ jobs:
            export PATH=$PATH:/home/runner/.local/bin
            conan --version
 
+      - name: Execute conan
+        run: mkdir build && cd build && conan install ..
+
       - name: configure
-        run: cmake --version && mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
+        run: cmake --version && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
 
       - name: build
         run: cmake --build build --config Debug
@@ -60,8 +66,11 @@ jobs:
            export PATH=$PATH:/home/runner/.local/bin
            conan --version
 
+      - name: Execute conan
+        run: mkdir build && cd build && conan install ..
+
       - name: configure
-        run: cmake --version && mkdir build && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
+        run: cmake --version && cd build && cmake .. -DCS_BUILD_WARNINGS_AS_ERRORS=ON
       - name: build
         run: cmake --build build --config Debug
       - name: test
